--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,27 @@
 {
   "name": "backend",
+  "version": "1.0.1",
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.670.0",
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.21.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "@types/uuid": "^10.0.0",
     "aws-sdk": "^2.1691.0",
     "backend": "file:",
+    "compression": "^1.7.4",
     "hono": "^4.6.4",
     "multer": "^1.4.5-lts.1",
-    "prisma": "^5.20.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240925.0",
+    "@types/compression": "^1.7.5",
+    "prisma": "^5.21.1",
     "wrangler": "^3.79.0"
   }
 }
